# netlist_simulator

./: CMakeCache.txt  CMakeLists.txt  Makefile  NetlistSimulator  README.md  cmake_install.cmake  complex_circuit.txt  main.cpp  netlist.cpp  netlist.hpp  netlist.txt  netlist_parser.cpp  netlist_parser.hpp  netlist_simulator  node.cpp  node.hpp  operation.cpp  operation.hpp  parser.cpp  port.cpp  port.hpp  regex_trial.cpp  run.sh  signal.hpp  simple_circuit.txt  test  test.cpp  try  wire.cpp  wire.hpp
